20080609 debugger/variable.c: add forgotten file.
20080609 debugger/breakpoint.c: must copy expression when setting a
         breakpoint condition.
20080609 debugger/breakpoint.[ch],ui/gtk/debugger.c: multiple time breakpoints
         didn't work properly.
20080610 debugger/breakpoint.c: add <string.h> for string prototypes (Fred).
20080610 ui/widget/debugger.c: fix widget debugger for multiple time
         breakpoints (Fred).
20080610 debugger/commandl.l: much better to have COMMANDSTATE1 as an
         inclusive start condition.
20080610 ui/{fb/fbdisplay.c,sdl/sdldisplay.c,svga/svgadisplay.c,uidisplay.h,
         widget/{browse.c,debugger.c,error.c,filesel.c,menu.c,options.pl,
         pokefinder.c,query.c,roms.c,select.c,text.c,widget.[ch],
         widget_internals.h,xlib/xdisplay.c}: modify widget UI to have a
         Spectrum 128 style look and feel based on FuseX (Fred).
20080612 ui/widget/{widget_internals.h,widget.c,options.pl}: allow options
         dialogs to be navigated by cursor keys (Fred).
20080613 debugger/{expression.c,variable.c}: add <string.h> for string
         prototypes (Fred).
20080614 ui/widget/{options.pl,widget_internals.h}: try to have widget
         options size themselves a little better (Fred).
20080614 ui/options.dat: make blocks plural (Fred).
20080614 ui/widget/options.pl: make a better stab at accounting for entry
         text length (Fred).
20080614 ui/widget/select.c: make select widgets size themselves a bit
         better too (Fred).
20080614 ui/widget/options.pl: move to a single generic options menu draw
         function (Fred).
20080614 ui/widget/options.pl: fix widget number entry options (Fred).
20080614 ui/widget/memory.c: fix the widget memory browse display
         (patch #1991755) (Gergely Szasz).
20080614 ui/xlib/xui.c: use XCheckMaskEvent() instead of XCheckIfEvent() with
         an empty test (patch #1991780) (Gergely Szasz).
20080614 menu_data.dat: ROM shortcut key for TS2068 doesn't work (Fred).